[SQUASH] https://github.com/dybvig/stex/pull/7#issuecomment-1820971301
- Adjust \schemedisplay{} to preserve the existing layout with the
  switch to <!DOCTYPE html>.
   inputs/scheme.hsty, doc/stex.css

--- a/doc/stex.css
+++ b/doc/stex.css
@@ -14,6 +14,8 @@ a.image:link, a.image:active, a.image:visited, a.image:hover {
   background: #FFFFFF;
 }
 
+.schemedisplay { line-height: 1.0625; }
+
 ul.tocchapter { list-style: none; }
 ul.tocsection { list-style: circle; color: #923a3a }
 
